--- a/real-time-stock/product-list/noshelf/index.html
+++ b/real-time-stock/product-list/noshelf/index.html
@@ -17079,7 +17079,7 @@ $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="../../noscript.js"></script>
+<script src="../../noshelf.js"></script>
 
 
 </html>
