--- a/real-time-stock/trolley/shelf/index.html
+++ b/real-time-stock/trolley/shelf/index.html
@@ -3501,5 +3501,5 @@ $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="../../shelf.js"></script>
+<script src="../../noshelf.js"></script>
 </html>
