--- a/real-time-stock/recent-purchases/shelf/index.html
+++ b/real-time-stock/recent-purchases/shelf/index.html
@@ -19266,6 +19266,5 @@ $(document).ready(function(){ suggestion.branch = 'B50300';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="../../shelf.js"></script>
-
+<script src="../../noshelf.js"></script>
 </html>
