--- a/real-time-stock/shopping-list/shelf/index.html
+++ b/real-time-stock/shopping-list/shelf/index.html
@@ -19923,6 +19923,6 @@ $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="../../shelf.js"></script>
+<script src="../../noshelf.js"></script>
 
 </html>
