--- a/real-time-stock/copy-previous-orders/shelf/index.html
+++ b/real-time-stock/copy-previous-orders/shelf/index.html
@@ -16951,6 +16951,6 @@ $(document).ready(function(){ suggestion.branch = 'B33100';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="../../shelf.js"></script>
+<script src="../../noshelf.js"></script>
 
 </html>
