--- a/real-time-stock/enter-codes/shelf/index.html
+++ b/real-time-stock/enter-codes/shelf/index.html
@@ -6311,6 +6311,6 @@ $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="../../shelf.js"></script>
+<script src="../../noshelf.js"></script>
 
 </html>
