update parent page to have 1400px width

--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="https://www.booker.co.uk/css/facia/booker.css?v=2.1.9.0" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <style>.sitecore-container {max-width: 1400px;}</style>
     <script defer src="./app.js"></script>
     <script defer src="./components.js"></script>
   </head>
-  <body>
+  <body class="sitecore-container">
     <div class="container pt-5 pb-5 text-center">
       <img src="//assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg" width="200" />
     </div>
