--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://www.booker.co.uk/css/facia/booker.css?v=2.1.9.0" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <style>.sitecore-container {max-width: 1400px;}</style>
+    <style>.sitecore-container {max-width: 1400px; margin: 0 auto;}</style>
     <script defer src="./app.js"></script>
     <script defer src="./components.js"></script>
   </head>
