--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <style>
-      .sitecore-container {max-width: 1400px; margin: 0 auto;} 
-      .sitecore-container > .container { max-width: 100%;}
+      .shop-by-brand-container {max-width: 1400px; margin: 0 auto;} 
+      .shop-by-brand-container > .container { max-width: 100%;}
     </style>
     <script defer src="./app.js"></script>
     <script defer src="./components.js"></script>
