--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -33,7 +33,7 @@
   <body>
     <div class="container" style="background: #000; height: 100px; color: #fff;"><h4>Container outside of shop by brand container</h4></div>
 
-    <div class="container shop-by-brand-container">
+    <div class="shop-by-brand-container">
     <div class="container py-3 text-center">
       <img src="//assets-global.website-files.com/61f27d3474c2ef62975a0106/61f27d3474c2ef78475a0118_Booker%20logo.svg" width="200" />
     </div>
