--- a/web-components-4.3.1/index.html
+++ b/web-components-4.3.1/index.html
@@ -20,6 +20,7 @@
     <style>
     .shop-by-brand-container {
       max-width: 1400px;
+      margin: 0 auto;
     }
 
     .shop-by-brand-container > .container {
