--- a/shop-by-brand/multiple-images/index.html
+++ b/shop-by-brand/multiple-images/index.html
@@ -830,28 +830,28 @@
 <!-- Gallery -->          
 <div class="product-image">
     <div class="multi-icon left">
-        <a data-slide="prev"><i class="fa-solid fa-circle-chevron-left fa-fw fa-2xl"></i></a>
+        <a data-slide="prev"><i class="fa-solid fa-circle-chevron-left fa-fw fa-lg"></i></a>
     </div>  
     <div class="multi-icon right">
-        <a data-slide="next"><i class="fa-solid fa-circle-chevron-right fa-fw fa-2xl"></i></a>
+        <a data-slide="next"><i class="fa-solid fa-circle-chevron-right fa-fw fa-lg"></i></a>
     </div>
    <a class="MagicZoom" id="product" data-options="hint: off;" href="https://media.booker.co.uk/bbimages/1/7d5d4b2e-e4d1-4e0e-9ce7-197938e3b990.jpg?date=20240808">
-            <img src="https://media.booker.co.uk/bbimages/1/7d5d4b2e-e4d1-4e0e-9ce7-197938e3b990.jpg?date=20240808" style="max-width: 1283px; max-height: 1283px;">
-            <div class="mz-lens" style="top: 0px; transform: translate(-10000px, -10000px); width: 275px; height: 275px;">
-                <img src="https://media.booker.co.uk/bbimages/1/7d5d4b2e-e4d1-4e0e-9ce7-197938e3b990.jpg?date=20240808" style="position: absolute; top: 0px; left: 0px; width: 593px; height: 593px; transform: translate(-151.203px, -91.5px);">
-            </div>
+        <img src="https://media.booker.co.uk/bbimages/1/7d5d4b2e-e4d1-4e0e-9ce7-197938e3b990.jpg?date=20240808" style="max-width: 1283px; max-height: 1283px;">
+        <div class="mz-lens" style="top: 0px; transform: translate(-10000px, -10000px); width: 275px; height: 275px;">
+            <img src="https://media.booker.co.uk/bbimages/1/7d5d4b2e-e4d1-4e0e-9ce7-197938e3b990.jpg?date=20240808" style="position: absolute; top: 0px; left: 0px; width: 593px; height: 593px; transform: translate(-151.203px, -91.5px);">
+        </div>
     </a>
-    <!-- Multi Images Div -->
-    <div id="multipleImagesPanel" class="multipleImagesPanel selectors magiczoom my-3">
+</div>
+<!-- Multi Images Div -->
+<div id="multipleImagesPanel" class="multipleImagesPanel selectors magiczoom my-3">
     
-    </div>    
 </div>
 
 
 <!-- Multi Images dots div (Mobile) -->
 
 
-<div class="thumbnails mt-3 mb-3">
+<div class="thumbnails my-3">
 </div>
 
 
