--- a/real-time-stock/branch-locator-panel/index.html
+++ b/real-time-stock/branch-locator-panel/index.html
@@ -58,7 +58,7 @@
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdyyJolAAAAACgcsj49zrez-uIeeJU-aeVpZAa3"></script>
 
-    <script defer src="../components.js"></script>
+    <script defer src="./components.js"></script>
 
 
 <script>(window.BOOMR_mq=window.BOOMR_mq||[]).push(["addVar",{"rua.upush":"true","rua.cpush":"false","rua.upre":"true","rua.cpre":"false","rua.uprl":"false","rua.cprl":"false","rua.cprf":"false","rua.trans":"SJ-54d1fa47-2c7a-47bf-962b-33c534302cb4","rua.cook":"true","rua.ims":"false","rua.ufprl":"false","rua.cfprl":"false","rua.isuxp":"false","rua.texp":"norulematch"}]);</script>
