--- a/searchimprovements/documentsearch/index.html
+++ b/searchimprovements/documentsearch/index.html
@@ -8,15 +8,17 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://www.booker.co.uk/images/favicon.ico" />
     <!-- Styles -->
     <link href="https://www.booker.co.uk/bundles/css?v=N9pDuw6UpfOONBFuGiSipzvgtL-VbexPVlPuhw0t8yY1" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-    <link rel="stylesheet" href="./documentsearch.css" />
+    <!--<link rel="stylesheet" href="https://www.booker.co.uk/css/facia/booker.css?v=2.7.8.0" />-->
 
-    <link rel="stylesheet" href="/css/facia/booker.css?v=2.7.8.0" />
+    <link rel="stylesheet" href="./booker.css" />
+
+    <link rel="stylesheet" href="./documentsearch.css" />
 
 
     <!-- Scripts -->
@@ -670,7 +672,7 @@
 
     ﻿
 
-<link href="/css/branch-stock.css" rel="stylesheet" />
+<link href="https://www.booker.co.uk/css/branch-stock.css" rel="stylesheet" />
 <script nonce="SZv3k1c7xbxoEd3twaqJbhpmEa/kOfMvFNa4Kn7IT2o=">
 
     window.items = window.items || [];
@@ -688,7 +690,7 @@
     var addedToList = '';
 
 </script>
-<script src="/scripts/ga4-data.js?version=2.7.8.0"></script>
+<script src="https://www.booker.co.uk/scripts/ga4-data.js?version=2.7.8.0"></script>
 <input data-val="true" data-val-required="The TrolleyType field is required." id="TrolleyType" name="TrolleyType" type="hidden" value="Delivery" />
 
 <div class="mainSubcategories pt-0 delivery">
@@ -2177,7 +2179,7 @@
 <input id="viewType" name="viewType" type="hidden">
 
 
-<script src="/scripts/notes.js?version=2.7.8.0"></script>
+<script src="https://www.booker.co.uk/scripts/notes.js?version=2.7.8.0"></script>
 <div id="add-note" class="modal fade show" tabindex="-1" role="dialog" data-backdrop-limit="1" aria-labelledby="add-note" aria-hidden="true" data-modal-parent="#alternative-products" style="z-index: 1600;">
     <div class="modal-dialog modal-dialog-centered tamModal" role="document">
         <div class="modal-content">
@@ -2604,6 +2606,7 @@ e.g. No Bigger than 6kg"
 
 <script type='text/javascript' src='https://www.booker.co.uk/scripts/main-nav/main-nav.js?version=2.7.8.0'></script>
 <script type='text/javascript' src='https://www.booker.co.uk/scripts/suggestion/keyword-suggestion.js?version=2.7.8.0'></script>
+<script type='text/javascript' src='./keyword-suggestion.js'></script>
 <script type='text/javascript' nonce='SZv3k1c7xbxoEd3twaqJbhpmEa/kOfMvFNa4Kn7IT2o='>
 $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
