--- a/searchimprovements/documentspage/index.html
+++ b/searchimprovements/documentspage/index.html
@@ -1329,7 +1329,7 @@
                 </div>
                 <div class="d-flex align-items-start pr-0 pt-3 pt-md-0">
                     <div class="filters row justify-content-end align-items-center">
-                        <div class="sort-by-desktop d-flex align-items-center">
+                        <!--div class="sort-by-desktop d-flex align-items-center">
                             <span class="font-weight-bold pr-2">Sort By</span>
     <div class="form-custom-select">
         <select name="sortOrder" id="sortOrder" form="sort">
@@ -1350,9 +1350,9 @@
         </select>
     </div>
 
-                        </div>
+                        </div>-->
 
-<a href="/products/print-product-list?printType=ProductList&amp;categoryName=13_100001&amp;returnUrl=http%3A%2F%2Fwww.booker.co.uk%2Fproducts%2Fproduct-list%3FcategoryName%3D13_100001%26flt%3D519&amp;flt=519&amp;pr=%7BminPrice%3A0%2CmaxPrice%3A0%7D" class="btn print-btn print-btn-color mr-2"><i class="fas fa-print"></i> Print Product List</a>
+<!--<a href="/products/print-product-list?printType=ProductList&amp;categoryName=13_100001&amp;returnUrl=http%3A%2F%2Fwww.booker.co.uk%2Fproducts%2Fproduct-list%3FcategoryName%3D13_100001%26flt%3D519&amp;flt=519&amp;pr=%7BminPrice%3A0%2CmaxPrice%3A0%7D" class="btn print-btn print-btn-color mr-2"><i class="fas fa-print"></i> Print Product List</a>-->
                         <button class="btn" id="subCatCol" onclick="switchListDesignCol()"><i class="fas fa-th-large"></i></button>
                         <button class="btn dark-blue-btn" id="subCatRow" onclick="switchListDesignRow()"><i class="fas fa-align-justify"></i></button>
                         <button id="filter-btn" class="btn">Filter <i class="fas fa-chevron-right pl-2"></i></button>
