--- a/searchimprovements/documentsearch/index.html
+++ b/searchimprovements/documentsearch/index.html
@@ -14,8 +14,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-    <link rel="stylesheet" href="https://www.booker.co.uk/css/facia/booker.css?v=2.7.8.0" />
-
+    <!--<link rel="stylesheet" href="https://www.booker.co.uk/css/facia/booker.css?v=2.7.8.0" />-->
+	
+    <link rel="stylesheet" href="./booker.css" />	
 
     <link rel="stylesheet" href="./documentsearch.css" />
 
