--- a/digitalvouchers/my-digital-vouchers/index.html
+++ b/digitalvouchers/my-digital-vouchers/index.html
@@ -933,8 +933,8 @@
 
 
     </div>-->
-    <div class="container digitalVouchers">
-
+    <div class="container digitalVouchers my-3">
+        
     </div>
 </div>
 
