--- a/digitalvouchers/my-digital-vouchers/index.html
+++ b/digitalvouchers/my-digital-vouchers/index.html
@@ -1147,6 +1147,6 @@ $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
 
-<script src="./components.js"></script>
+<script src="../components.js"></script>
 
 </html>
