--- a/digitalvouchers/my-digital-vouchers/index.html
+++ b/digitalvouchers/my-digital-vouchers/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <!-- Scripts -->
         <script nonce="ldV34mSHkCPNBjd8jj3ESPzzhe8xaPf9J5KTz0H32Aw=">
