--- a/searchimprovements/documentspage/index.html
+++ b/searchimprovements/documentspage/index.html
@@ -1335,7 +1335,7 @@
         <select name="sortOrder" id="sortOrder" form="sort">
                 <option value="DisplayName;Ascending"  >Name (A-Z)</option>
                 <option value="DisplayName;Descending"  >Name (Z-A)</option>
-                <!--<option value="Promotion;Ascending"  selected >Promotions</option>-->
+                <option value="Promotion;Ascending"  selected >Relevancy</option>
         </select>
     </div>
 
@@ -1346,7 +1346,7 @@
         <select name="sortOrder" id="sortOrder" form="sort">
                 <option value="DisplayName;Ascending"  >Name (A-Z)</option>
                 <option value="DisplayName;Descending"  >Name (Z-A)</option>
-                <option value="Promotion;Ascending"  selected >Promotions</option>
+                <option value="Promotion;Ascending"  selected >Relevancy</option>
         </select>
     </div>
 
