--- a/searchimprovements/documentsearch/index.html
+++ b/searchimprovements/documentsearch/index.html
@@ -2870,7 +2870,7 @@ e.g. No Bigger than 6kg"
                 height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-        <script src="https://www.datadoghq-browser-agent.com/datadog-rum-v4.js"
+        <!--<script src="https://www.datadoghq-browser-agent.com/datadog-rum-v4.js"
                 type="text/javascript">
         </script>
         <script nonce="SZv3k1c7xbxoEd3twaqJbhpmEa/kOfMvFNa4Kn7IT2o=">
@@ -2886,11 +2886,11 @@ e.g. No Bigger than 6kg"
                 replaySampleRate: 0,
                 trackInteractions: false
             });
-        </script>
+        </script>-->
 
 
 <script type='text/javascript' src='https://www.booker.co.uk/scripts/main-nav/main-nav.js?version=2.7.8.0'></script>
-<script type='text/javascript' src='https://www.booker.co.uk/scripts/suggestion/keyword-suggestion.js?version=2.7.8.0'></script>
+<!--<script type='text/javascript' src='https://www.booker.co.uk/scripts/suggestion/keyword-suggestion.js?version=2.7.8.0'></script>-->
 
 <script type='text/javascript' src='./keyword-suggestion.js'></script>
 <script type='text/javascript' nonce='SZv3k1c7xbxoEd3twaqJbhpmEa/kOfMvFNa4Kn7IT2o='>
