--- a/searchimprovements/documentsearch_v2/index.html
+++ b/searchimprovements/documentsearch_v2/index.html
@@ -4178,12 +4178,12 @@ e.g. No Bigger than 6kg"
 </body>
 
     <!-- Google Tag Manager (noscript) -->
-    <noscript>
+    <!--<noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KN2DJXP"
                 height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
+    </noscript> -->
     <!-- End Google Tag Manager (noscript) -->
-        <script src="https://www.datadoghq-browser-agent.com/datadog-rum-v4.js"
+      <!--  <script src="https://www.datadoghq-browser-agent.com/datadog-rum-v4.js"
                 type="text/javascript">
         </script>
         <script nonce="50WviGBJ1fG6cWwe1Sj9cvu17KFbQ3KLrl3laQtLUuQ=">
@@ -4200,7 +4200,7 @@ e.g. No Bigger than 6kg"
                 trackInteractions: false
             });
         </script>
-
+    -->
 
 <script type='text/javascript' src='https://www.booker.co.uk/scripts/main-nav/main-nav.js?version=2.8.8.0'></script>
 <!--<script type='text/javascript' src='https://www.booker.co.uk/scripts/suggestion/keyword-suggestion.js?version=2.8.8.0'></script>-->
