--- a/searchimprovements/documentsearch_v2/index.html
+++ b/searchimprovements/documentsearch_v2/index.html
@@ -32,7 +32,7 @@
 
         </script>
  <!-- Google Tag Manager -->
-        <script nonce="50WviGBJ1fG6cWwe1Sj9cvu17KFbQ3KLrl3laQtLUuQ=">
+        <!--<script nonce="50WviGBJ1fG6cWwe1Sj9cvu17KFbQ3KLrl3laQtLUuQ=">
                     (function (w, d, s, l, i) {
                         w[l] = w[l] || []; w[l].push({
                             'gtm.start':
@@ -40,7 +40,7 @@
                         }); var f = d.getElementsByTagName(s)[0],
                             j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                                 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-                    })(window, document, 'script', 'dataLayer', 'GTM-KSZX3XJ');</script>
+                    })(window, document, 'script', 'dataLayer', 'GTM-KSZX3XJ');</script>-->
  <!-- End Google Tag Manager -->
 
 
@@ -49,22 +49,22 @@
     <script src="https://www.booker.co.uk/bundles/js?v=xxUYjFaLmqYDBdyc4x2RRIGumWSh76ZSVrwgF4tIOfo1"></script>
 
 
-    <script type='text/javascript' src='https://static.queue-it.net/script/queueclient.min.js'></script>
+    <!--<script type='text/javascript' src='https://static.queue-it.net/script/queueclient.min.js'></script>
     <script data-queueit-c='booker'
             type='text/javascript'
             src='https://static.queue-it.net/script/queueconfigloader.min.js'>
-    </script>
+    </script>-->
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdyyJolAAAAACgcsj49zrez-uIeeJU-aeVpZAa3"></script>
+    <!--<script src="https://www.google.com/recaptcha/enterprise.js?render=6LdyyJolAAAAACgcsj49zrez-uIeeJU-aeVpZAa3"></script>-->
 
 </head>
 
 <body>
             <!-- Google Tag Manager (noscript) -->
-            <noscript>
+            <!--<noscript>
                 <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KSZX3XJ"
                         height="0" width="0" style="display:none;visibility:hidden"></iframe>
-            </noscript>
+            </noscript>-->
             <!-- End Google Tag Manager (noscript) -->
     
 
