--- a/searchimprovements/documentsearch_v2/index.html
+++ b/searchimprovements/documentsearch_v2/index.html
@@ -4209,5 +4209,5 @@ e.g. No Bigger than 6kg"
 $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
-<!--<script src="./components.js"></script>-->
+<script src="./components.js"></script>
 </html>
