--- a/digitalvouchers/trolley/index.html
+++ b/digitalvouchers/trolley/index.html
@@ -735,7 +735,7 @@
 
 </script>
 <main class="mt-2 container-fluid p-0">
-    <div class="digitalVouchersPanel">
+    <div class="digitalVouchersPanel d-none">
                         
     </div>
     <div class="mainSubcategories pt-0 delivery">
