--- a/ourbooker/yourchanges/index.html
+++ b/ourbooker/yourchanges/index.html
@@ -243,6 +243,52 @@
               </div>
               <div class="col-12 col-lg-6 my-3">
                 <div class="container bg-white my-3 p-4 h-100">
+                  <section class="self-serve--section"></section>
+                    <div class="self-serve--disabled-field align-items-center">
+                    <h2 class="mb-md-3 font-weight-bolder col-xs-12 col-sm-8 col-xl-9 pl-0">Bank Details</h2>
+                    <button data-item="BankDetails" class="btn self-serve--cancel-change-btn col-xs-12 col-sm-4 col-xl-3 cancelChange">Cancel Change</button>
+                    </div>
+                  </section>
+                    <section class="self-serve--section d-md-none">
+                        <div class="self-serve--disabled-field align-items-center">
+                            <label for="account-name" class="col-12 col-xl-3"></label>
+                            <p class="col-xs-12 col-sm-8 col-lg-8 col-xl-6 p-0">
+                            </p>
+                      
+                        </div>
+                    </section>
+                    <section class="self-serve--section">
+                        <div class="self-serve--disabled-field align-items-center">
+                            <label for="account-name" class="col-12 col-xl-3"> Name on Bank Account</label>
+                            <p class="col-xs-12 col-sm-8 col-lg-8 col-xl-6 p-0">
+                                <i class="fa-sharp fa-solid fa-magnifying-glass viewChange" title="View Change Details" data-item="{&quot;NameOnBankAccount&quot;:&quot;test&quot;}"></i>
+                                test
+                            </p>
+                        </div>
+                    </section>
+    
+                    <section class="self-serve--section">
+                        <div class="self-serve--disabled-field align-items-center">
+                            <label for="sort-code" class="col-12 col-xl-3"> Sort Code </label>
+                            <p class="col-xs-12 col-sm-8 col-lg-8 col-xl-6 p-0">
+                                <i class="fa-sharp fa-solid fa-magnifying-glass viewChange" title="View Change Details" data-item="{&quot;SortCode&quot;:&quot;*****56&quot;}"></i>
+                                *****56
+                            </p>
+                        </div>
+                    </section>
+                    <section class="self-serve--section">
+                        <div class="self-serve--disabled-field align-items-center">
+                            <label for="account-number" class="col-12 col-xl-3"> Account Number </label>
+                            <p class="col-xs-12 col-sm-8 col-lg-8 col-xl-6 p-0">
+                                <i class="fa-sharp fa-solid fa-magnifying-glass viewChange" title="View Change Details" data-item="{&quot;AccountNumber&quot;:&quot;*******78&quot;}"></i>
+                                *******78
+                            </p>
+                        </div>
+                    </section>
+                </div>
+            </div>
+              <div class="col-12 col-lg-6 my-3">
+                <div class="container bg-white my-3 p-4 h-100">
                   <h2 class="mb-md-3 font-weight-bolder">Contact Details</h2>
                   <section class="self-serve--section">
                     <div class="self-serve--disabled-field align-items-center">
