--- a/ourbooker/yourchanges/index.html
+++ b/ourbooker/yourchanges/index.html
@@ -245,7 +245,7 @@
                 <div class="container bg-white my-3 p-4 h-100">
                   <section class="self-serve--section"></section>
                     <div class="self-serve--disabled-field align-items-center">
-                    <h2 class="mb-md-3 font-weight-bolder col-xs-12 col-sm-8 col-xl-9 pl-0">Bank Details</h2>
+                    <h2 class="m-0 p-0 font-weight-bolder col-xs-12 col-sm-8 col-xl-9">Bank Details</h2>
                     <button data-item="BankDetails" class="btn self-serve--cancel-change-btn col-xs-12 col-sm-4 col-xl-3 cancelChange">Cancel Change</button>
                     </div>
                   </section>
