--- a/ourbooker/yourchanges/index.html
+++ b/ourbooker/yourchanges/index.html
@@ -257,7 +257,7 @@
                       
                         </div>
                     </section>
-                    <section class="self-serve--section">
+                    <section class="self-serve--section mt-0">
                         <div class="self-serve--disabled-field align-items-center">
                             <label for="account-name" class="col-12 col-xl-3"> Name on Bank Account</label>
                             <p class="col-xs-12 col-sm-8 col-lg-8 col-xl-6 p-0">
