--- a/ourbooker/yourchanges/index.html
+++ b/ourbooker/yourchanges/index.html
@@ -245,11 +245,11 @@
                 <div class="container bg-white my-3 p-4 h-100">
                   <section class="self-serve--section"></section>
                     <div class="self-serve--disabled-field align-items-center">
-                    <h2 class="m-0 p-0 font-weight-bolder col-xs-12 col-sm-8 col-xl-9">Bank Details</h2>
+                    <h2 class="mb-3 p-0 font-weight-bolder col-xs-12 col-sm-8 col-xl-9">Bank Details</h2>
                     <button data-item="BankDetails" class="btn self-serve--cancel-change-btn col-xs-12 col-sm-4 col-xl-3 cancelChange">Cancel Change</button>
                     </div>
-                  </section>
-                    <section class="self-serve--section d-md-none">
+                  
+                    <section class="self-serve--section d-none">
                         <div class="self-serve--disabled-field align-items-center">
                             <label for="account-name" class="col-12 col-xl-3"></label>
                             <p class="col-xs-12 col-sm-8 col-lg-8 col-xl-6 p-0">
