--- a/custom-tool/index.html
+++ b/custom-tool/index.html
@@ -883,7 +883,7 @@
 			custrec: 'INTCUST-CUSTNO,INTCUST-DATA.,INTCUST-WEB-BRANCH-ID,INTCUST-BUSINESS-OWNER-NAME,INTCUST-TITLE,INTCUST-SURNAME,INTCUST-FIRSTNAME,INTCUST-TRADING-NAME,INTCUST-STREET2,INTCUST-STREET3,INTCUST-HOUSE-NUMBER,INTCUST-STREET,INTCUST-STREET4,INTCUST-STREET5,INTCUST-CITY,INTCUST-DISTRICT,INTCUST-POSTCODE,INTCUST-TELEPHONE,INTCUST-MOBILE-PHONE,INTCUST-FAX,INTCUST-EMAIL-ADDRESS,INTCUST-CON-PREF-MAIL,INTCUST-CON-PREF-TELEPHONE,INTCUST-CON-PREF-EMAIL,INTCUST-CON-PREF-MOBILE,INTCUST_LICENCED,INTCUST-CLASSIFICATION,INTCUST-STATUS,INTCUST-VAT-REG-NO,INTCUST-NEW-CUSTOMER-TYPE,INTCUST-CUSTOMER-REFERRED-BY,INTCUST-CHARITY-NUMBER,INTCUST-DATE-TERMS-ACCEPTED,INTCUST-REGISTERED-BY,INTCUST-WEB-TITLE,INTCUST-WEB-FIRSTNAME,INTCUST-WEB-SURNAME,INTCUST-WEB-EMAIL-ADDRESS,INTCUST-CAN-EMAIL,INTCUST-AFILIATED-CAN-EMAIL,INTCUST-WEB-WEB-SECTOR,INTCUST-WEB-DATE-REGISTERED,INTCUST-DATE-CHANGED,INTCUST-TIME-CHANGED,INTCUST-FACIA-TYPE,PAPER-COPY-STATEMENT-FLAG,DS-ACTIVE-FLAG,DS-DATE-ACTIVE,DS-DATE-INACTIVE',
 			orders: {
 				fh: 'INTCORD-FH-RECTYPE,INTCORD-FH-FILE-NUM,INTCORD-FH-FILE-DATE,INTCORD-FH-FILE-TIME', 
-				oh: 'INTCORD-OH-RECTYPE,INTCORD-OH-STORE-ID,INTCORD-OH-CUSTNO,INTCORD-OH-ORDER-TYPE,INTCORD-OH-ORDER-NUM,INTCORD-OH-ORDER-DATE,INTCORD-OH-ORDER-TIME,INTCORD-OH-CARD-PAID,INTCORD-OH-AUTH-AMOUNT,INTCORD-OH-AUTH-EXPIRY,INTCORD-DELIVERY-DATE,INTCORD-ORDER-SOURCE,INTCORD-CUST-PO-NBR,INTCORD-COLLECTION-TIME,INTCORD-MOBILE-NUM,INTCORD-COLLECT-DELIVERED,INTCORD-E-MAIL REQUIRED,SUPPLIER-SUPPNO,INTCORD-STORE-ORDER-GROUP,INTCORD-LONDIS-ORDER-GROUP',
+				oh: 'INTCORD-OH-RECTYPE,INTCORD-OH-STORE-ID,INTCORD-OH-CUSTNO,INTCORD-OH-ORDER-TYPE,INTCORD-OH-ORDER-NUM,INTCORD-OH-ORDER-DATE,INTCORD-OH-ORDER-TIME,INTCORD-OH-CARD-PAID,INTCORD-OH-AUTH-AMOUNT,INTCORD-OH-AUTH-EXPIRY,INTCORD-DELIVERY-DATE,INTCORD-ORDER-SOURCE,INTCORD-CUST-PO-NBR,INTCORD-COLLECTION-TIME,INTCORD-MOBILE-NUM,INTCORD-COLLECT-DELIVERED,INTCORD-E-MAIL REQUIRED,SUPPLIER-SUPPNO,INTCORD-STORE-ORDER-GROUP,INTCORD-LONDIS-ORDER-GROUP,INTCORD-OH-PAYMENT-TOKEN-ID-LENGTH,INTCORD-OH-PAYMENT-TOKEN-ID,INTCORD-OH-TRANSACTION-IDENTIFIER-LENGTH,INTCORD-OH-TRANSACTION-IDENTIFIER',
 				od: 'INTCORD-OD-RECTYPE,INTCORD-OD-SUCODE,INTCORD-OD-DESC,INTCORD-OD-ITM-IN-SELL-UNT,INTCORD-OD-PCK-SIZE,INTCORD-OD-QUANTITY,INTCORD-OD-NOTES,INTCORD-OD-PRICE,SUPPLIER-OWN-ITEM-CODE,MARKETPLACE-PRODUCT-CODE',
 				oc: 'INTCORD-OC-RECTYPE,INTCORD-OC-COMMENT-TYPE,INTCORD-OC-COMMENT,INTCORD-OC-RECTYPE,INTCORD-OC-COMMENT-TYPE,INTCORD-OC-COMMENT,INTCORD-OC-RECTYPE,INTCORD-OC-COMMENT-TYPE,INTCORD-OC-COMMENT,INTCORD-OC-RECTYPE,INTCORD-OC-COMMENT-TYPE,INTCORD-OC-COMMENT',
 				ot: 'INTCORD-OT-RECTYPE,INTCORD-OT-DEPOT,INTCORD-OT-CUSTOMER-NUM,INTCORD-OT-ORDER-NUM,INTCORD-OT-DET-LINE-CNT',
@@ -966,8 +966,8 @@
 						length: 4
 					},
 					oh: {
-						regex: /^(.{2})(.{5})(.{9})(.{1})(.{10})(.{8})(.{4})(.{1})(?<decimal1_2>[^.]{8})(.{8})(.{8})(.{1})(.{12})(.{4})(.{32})(.{1})(.{1})(.{7})(.{2})(.{1})$/d,
-						length: 20
+						regex: /^(.{2})(.{5})(.{9})(.{1})(.{10})(.{8})(.{4})(.{1})(?<decimal1_2>[^.]{8})(.{8})(.{8})(.{1})(.{12})(.{4})(.{32})(.{1})(.{1})(.{7})(.{2})(.{1})(.{2})(.{21})(.{2})(.{56})$/d,
+						length: 24
 					},
 					od: {
 						regex: /^(.{2})(.{6})(.{28})(.{4})(.{7})(.{5})(.{255})(?<decimal1_2>[^.]{8})(.{15})(.{7})$/d,
@@ -1398,4 +1398,3 @@
 
 </body>
 </html>
-
