--- a/deliverytracker/publicpage/index.html
+++ b/deliverytracker/publicpage/index.html
@@ -193,7 +193,7 @@
         <div class="row d-flex justify-content-center">
             <div class="checkbox mb-3">
                 <label>
-                  <input type="checkbox" value="remember-me"> Remember me
+                  <input type="checkbox" value="remember-me"> Remember My Details
                 </label>
             </div>
         </div>
