--- a/custom-tools/file-converter/index.html
+++ b/custom-tools/file-converter/index.html
@@ -47,7 +47,7 @@
 	<main>
 		<div class="relative isolate p-6 pt-8 lg:px-8 bg-gray-100 text-left">	
 			<h1 class="text-balance text-4xl font-semibold tracking-tight text-gray-900 sm:text-4xl">File Converter</h1>
-			<p class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">The aim is to be able to convert all interfaces into readable csv format. Need to get the actual files from Getronics for all interfaces to check each one actually works. Maintenance is the form of getting the latest interface fields to match this tool. This is fast moving, very ad hoc and subject to sudden changes and movements so it can break at any time.</p>
+			<p class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">The aim is to be able to convert all interfaces into readable csv format. Need to get the actual files from Getronics for all interfaces to check each one actually works. Maintenance is the form of getting the latest interface fields to match this tool. This is fast moving, very ad hoc and subject to sudden changes and movements so it can break at any time. The convert process may break if the file is too big, this is being actively worked on to try and resolve.</p>
 			<div class="mt-10 flex items-center justify-center gap-x-6">
 		
 				<input type="file" class="block w-full text-sm text-slate-500
@@ -88,7 +88,31 @@
 			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
 					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
 			 </svg>
+			EBIZ_clbprice
+		</li>
+		<li class="flex items-center">
+			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+			 </svg>
+			EBIZ_custcredit
+		</li>
+		<li class="flex items-center">
+			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+			 </svg>
 			EBIZ_customer
+		</li>
+		<li class="flex items-center">
+			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+			 </svg>
+			EBIZ_enhancedhistory
+		</li>
+		<li class="flex items-center">
+			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+			 </svg>
+			EBIZ_fasprice
 		</li>
 		<li class="flex items-center">
 			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
@@ -143,6 +167,18 @@
 					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
 			 </svg>
 			EBIZ_promotostore
+		</li>
+		<li class="flex items-center">
+			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+			 </svg>
+			EBIZ_stdprice
+		</li>
+		<li class="flex items-center">
+			<svg class="w-3.5 h-3.5 me-2 text-green-500 dark:text-green-400 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+					<path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+			 </svg>
+			EBIZ_tnareasons
 		</li>
 	</ul>
 	
@@ -301,3 +337,4 @@
 	</body>
 	<script>$('#year').text((new Date).getFullYear());</script>
 </html>
+
