--- a/deliverytracker/publicpage/index.html
+++ b/deliverytracker/publicpage/index.html
@@ -198,11 +198,12 @@
                 <div class="checkbox">
                     <label><input type="checkbox" class="remember-me" value="remember-me"> Remember My Details</label>
                 </div>
-                <a href="/Help/help#id92f8568e" target="_blank" class="forgotten-customer">Forgotten your Customer Number?</a>
-            
         </div>
         <div class="input-group my-4 d-flex justify-content-start">
             <button type="submit" id="trackMyDeliveries" class="btn btn-primary">Track My Deliveries</button>   
+        </div>
+        <div class="row d-flex my-4">
+            <a href="/Help/help#id92f8568e" target="_blank" class="forgotten-customer">Forgotten your Customer Number?</a>
         </div>
 </form></div>
 
