--- a/deliverytracker/publicpage/index.html
+++ b/deliverytracker/publicpage/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
+<link rel="stylesheet" href="./style.css">
 
     <!-- Scripts -->
         <script nonce="BQ9P1DjVMrTs31WaOCB03AFLzwRVNE9uTaMQ8lERxho=">
@@ -66,114 +67,7 @@
                         height="0" width="0" style="display:none;visibility:hidden"></iframe>
             </noscript>
             <!-- End Google Tag Manager (noscript) -->
-<style>
 
-      body {
-        font-family: 'Lato';
-        text-align: center;
-      }
-
-			main {
-				max-width: 1280px;
-				margin: 0 auto;
-			}
-
-
-      .booker {
-        background: #2356AA;
-				color: #fff;
-				min-height: 65vh !important;
-      }
-
-			.booker-bg {
-				padding-top:4rem;
-			}
-
-			.col-6 {
-				padding: 0;
-			}
-
-	  form a,
-	  form a:hover {
-		color: #ffffff;
-	  }
-
-	.input-group > .input-group-prepend {
-		flex: 0 0 20%;
-	}
-	.input-group .input-group-text {
-		width: 100%;
-	}
-
-    .remember-me {
-        width: 20px;
-        transform: scale(2);
-        margin-right: 5px;
-    }
-
-    .forgotten-customer {
-        font-size: 85%;
-    }
-
-
-	 /* .form-control,
-	  .input-group-text
-	  {
-		border-radius: 0.5rem;
-	  } */
-
-		input::-ms-input-placeholder { /* Edge 12-18 */
-			color: #D3D3D3 !important;
-		}
-
-		input::placeholder {
-			color: #D3D3D3 !important;
-		}
-
-
-			.input-group-text {
-				color: #062F6E;
-				font-weight: bold;
-				background-color: #ffffff;
-			}
-
-
-			.form, .alert {
-				max-width: 450px;
-				margin: 0 auto;
-			}
-
-			.form-control {
-				padding: 1.375rem .75rem;
-			}
-
-			.btn {
-				background-color: #007bff;
-				border-radius: 0.5rem;
-			}
-
-			.btn:hover {
-				background-color: #007bff;
-				text-decoration: none;
-			}
-
-			.trackTagId-text {
-				padding-right: 19px;
-			}
-
-			footer #social {
-				font-size: 30px;
-				color: #062F6E;
-			}
-
-			@media only screen and (max-width: 590px) {
-				.text-left {
-					text-align: center !important;
-				}
-			}
-
-
-</style>
 <div class="container-fluid my-4">
     <img src="https://www.booker.co.uk/images/booker.png">
 </div>
