--- a/deliverycutoff/index.html
+++ b/deliverycutoff/index.html
@@ -103,7 +103,7 @@
                     <span class="customer-title">Web Test  15th April 15.21</span>
                 </div>
                 
-                <div id="counters-non-facia" class="col d-flex justify-content-around">
+                <div id="counters-non-facia" class="col d-flex">
                   <div id="non-facia-order-counter" class="d-flex mx-3">
                       <div class="title title non-facia-title">
                           <p class="mb-0 font-weight-bold">ORDER CUT-OFF</p>
@@ -401,7 +401,7 @@
 
 
       
-        <div id="counters-non-facia" class="d-flex justify-content-around">
+        <div id="counters-non-facia" class="d-flex">
             <div id="non-facia-order-counter" class="d-flex">
                 <div class="title title non-facia-title">
                     <p class="mb-0 font-weight-bold">ORDER CUT-OFF</p>
