--- a/home-branch-range/productlist/extendedrange/index.html
+++ b/home-branch-range/productlist/extendedrange/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="./style.css">
 
 
     <!-- Scripts -->
@@ -17330,5 +17330,5 @@ let searchMode = 0;
 $(document).ready(function(){ suggestion.branch = 'B26600';})
 pageSearchUrl = '/products/search'
 </script>
-<script src="../../components.js"></script>
+<script src="./components.js"></script>
 </html>
