--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -32,6 +32,7 @@
         <script src="https://www.booker.co.uk/scripts/bootstrap.min.js"></script>
         <script src="https://www.booker.co.uk/scripts/global.js"></script>
         <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdyyJolAAAAACgcsj49zrez-uIeeJU-aeVpZAa3"></script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
         <style>
             main#booker_administration_login .login-here .labels h6 {
@@ -54,7 +55,7 @@
     -webkit-transform-origin:0 0;
 }
 
-@media screen and (max-height: 767px){
+@media screen and (max-height: 767px) {
     #rc-imageselect, .g-recaptcha {
             transform:scale(0.8);
             -webkit-transform:scale(0.8);
@@ -93,7 +94,12 @@
                     required />
                 </div>
 
-                <div class="g-recaptcha" data-sitekey="6Lfuu8EUAAAAAMbevNTo8jawey-UMOsmn2JtR3u1"><div style="width: 304px;height: 78px;"><div><iframe title="reCAPTCHA" width="304" height="78" role="presentation" name="a-lcjv1yxt8ubk" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation" src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6Lfuu8EUAAAAAMbevNTo8jawey-UMOsmn2JtR3u1&amp;co=aHR0cHM6Ly93d3cuYm9va2VyLmNvLnVrOjQ0Mw..&amp;hl=en&amp;v=zIriijn3uj5Vpknvt_LnfNbF&amp;size=normal&amp;cb=er2jk1a133yf"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div><iframe style="display: none;"></iframe></div>
+                <div class="g-recaptcha"
+                     data-sitekey="6Ldzhb8qAAAAABltFWvytdflwNvZRw-Im_N2pxjF"
+                     data-callback="onSubmit"
+                     data-badge="inline"
+                     data-size="invisible">
+                </div>
           
                 <button class="w-full bg-booker text-white font-medium py-2.5 rounded-md transition-colors">
                   Sign In
@@ -189,8 +195,6 @@
     });
 </script>
 
-
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <script nonce="M4fMIl0xx6RTkbNtlaQRP6vVQKRLsQ8aNgjSjYyilfk=">
 
