--- a/admin-portal/recaptcha-test.html
+++ b/admin-portal/recaptcha-test.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <form action="" method="POST">
-      <div class="g-recaptcha" data-sitekey="6LfwwIQqAAAAANcF-qB9oAxVzaVwIum45H588zwK" data-action="LOGIN"></div>
+      <div class="g-recaptcha" data-sitekey="6LfwwIQqAAAAANcF-qB9oAxVzaVwIum45H588zwK" data-callback="onSubmit" data-badge="inline" data-size="invisible" data-action="LOGIN"></div>
       <br/>
       <input type="submit" value="Submit">
     </form>
