--- a/admin-portal/login.html
+++ b/admin-portal/login.html
@@ -31,7 +31,7 @@
         <script src="https://www.booker.co.uk/scripts/popper.min.js"></script>
         <script src="https://www.booker.co.uk/scripts/bootstrap.min.js"></script>
         <script src="https://www.booker.co.uk/scripts/global.js"></script>
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
 
         <style>
             main#booker_administration_login .login-here .labels h6 {
