--- a/admin-portal/validation.html
+++ b/admin-portal/validation.html
@@ -21,17 +21,10 @@
           </script>
         <link rel="shortcut icon" type="image/x-icon" href="https://www.booker.co.uk/images/favicon.ico" />
         <!-- Styles -->
-        <link rel="stylesheet" href="https://www.booker.co.uk/css/global.css" />
-        <link rel="stylesheet" href="https://www.booker.co.uk/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="https://www.booker.co.uk/css/all.min.css" />
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
         <!-- Scripts -->
-        <script src="https://www.booker.co.uk/scripts/jquery-3.6.4.min.js"></script>
-        <script src="https://www.booker.co.uk/scripts/popper.min.js"></script>
-        <script src="https://www.booker.co.uk/scripts/bootstrap.min.js"></script>
-        <script src="https://www.booker.co.uk/scripts/global.js"></script>
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
 
         <style>
             main#booker_administration_login .login-here .labels h6 {
